Fix spacing for score labels and player names. Fix issue with scorelines not rerendering properly.

--- a/front/src/components/Play/Player/Player.scss
+++ b/front/src/components/Play/Player/Player.scss
@@ -1,22 +1,31 @@
 .player {
   position: relative;
+  .dot {
+    height: 5px;
+    width: 5px;
+    position: absolute;
+    display: inline-block;
+    border-radius: 50%;
+    z-index: 10;
+    top: 10px;
+  }
+  
+  .playerName {
+    display: inline-block;
+    // width: 200px;
+  
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+
+    &:hover {
+      overflow: visible;
+    }
+  }
+
+  .line {
+    position: absolute;
+    // left: 120px;
+  }
 }
 
-.dot {
-  height: 5px;
-  width: 5px;
-  position: absolute;
-  display: inline-block;
-  border-radius: 50%;
-  z-index: 10;
-  top: 10px;
-}
-
-.playerName {
-  display: inline-block;
-  // width: 200px;
-
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-}
